--- a/retype.yml
+++ b/retype.yml
@@ -1,6 +1,6 @@
 input: ./
 output: .retype
-url: kb.uqbar.com
+url: https://moderfla.github.io/basedeconhecimento/
 
 branding:
   label: Base de Conhecimento
